# mycochip

./: Cargo.toml  Dockerfile  README.md  build.rs  start_vm.sh
benches/: sim_speed.rs
examples/: echonet.yaml  webserver.yaml
examples/blink/: blink.yaml  main.c  makefile
examples/echo/: echo.c  makefile
examples/echo_int/: echo_int.c  makefile
examples/echo_spi/: echo_spi.c  makefile
examples/echo_spi_int/: echo_spi_int.c  makefile
examples/eeprom/: eeprom.yaml  main.c
examples/http_hello/: http_hello.c  makefile
examples/sat_demo/: comms.c  comms.h  sat_demo.yaml  test_comms.py
examples/sat_demo/cam/: cam.c  makefile
examples/sat_demo/main/: main.c  makefile
examples/sat_demo/thrust/: makefile  thrust.c
examples/uart_hello_world/: makefile  uart_hello_world.c  uart_hello_world.yaml
messages/: request.proto
src/: avr_net.rs  cli.rs  comms.rs  config.rs  lib.rs  main.rs  network.rs  server_node.rs
src/avr_simulator/: LICENSE  README.md  adc.rs  avr.rs  firmware.rs  ioctl.rs  logging.rs  mod.rs  port.rs  spi.rs  uart.rs
