[package]
name = "mycochip"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
simavr-ffi = { git = "https://github.com/jmpinit/simavr-ffi.git" }
libc = "0.2"
clap = { version = "4.4.0", features = ["derive"] }
clap_complete = "4.4.0"
prost = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
zmq = "0.10.0"

[build-dependencies]
clap = "*"
clap_complete = "*"
prost-build = "0.11.9"
